Product section overflowing bug fix

--- a/assets/component-product-review.css
+++ b/assets/component-product-review.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
     justify-content: center;
     align-self: center;
     align-self: center;
@@ -19,6 +20,20 @@
     position: relative;
     z-index: 1;
 }  
+
+.product-review__text{
+    width: 100%;
+}
+
+.product-review__text > table{
+    width: 100%;
+}
+
+@media screen and (max-width: 450px){
+    .product-review__content {
+        padding: 20px 10px;
+    }
+}
 
 
 .product-review .grid__item::after {
